<resources>
    <string name="app_name">OpenStreetMap2024</string>
    <string name="descHint">Type in your description here</string>
    <string name="sign_up_or_sign_in">SIGN UP OR SIGN IN:</string>
    <string name="user_email_com">user@email.com</string>
    <string name="password_hint">********</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="map">Map</string>
    <string name="post">Post</string>
    <string name="inventory">Inventory</string>
    <string name="settings">settings</string>
    <string name="token_image">token_image</string>
    <string name="generaterandtoken">GenerateRandToken</string>
</resources>